[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "josiann"
description = "Simulated Annealing for noisy cost functions."
version = "1.1.3rc2"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Matteo Bouvier", email = "m.bouvier@vidium-solutions.com"}
]
maintainers = [
    {name = "Matteo Bouvier", email = "m.bouvier@vidium-solutions.com"}
]
readme = {file = "README.md", content-type="text/markdown"}
dependencies = [
    "numpy",
    "attrs",
    "tqdm",
]
keywords = [
    "simulated annealing",
    "optimization",
    "noisy"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: CeCILL-B Free Software License Agreement (CECILL-B)",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Utilities",
    "Typing :: Typed"
]


[project.optional-dependencies]
plot = ["plotly"]

docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "nbsphinx",
    "IPython",
    "sphinx-rtd-theme"
]

[project.urls]
Documentation = "https://josiann.readthedocs.io/"
Source = "https://github.com/Vidium/josiann"

[tool.setuptools.packages.find]
include = [
    "josiann",
    "josiann.moves",
    "josiann.parallel",
    "josiann.storage",
    "josiann.storage.parallel",
    "josiann.backup",
    "josiann.backup.parallel",
    "josiann.algorithms"
]

[tool.vulture]
paths = ["josiann", "tests", "vulture_whitelist.py"]

[tool.ruff]
line-length = 120
