[tool.poetry]
name = "josiann"
version = "1.1.6"
description = "Simulated Annealing for noisy cost function"
authors = ["Matteo Bouvier <m.bouvier@vidium-solutions.com>"]
readme = "README.md"
license = "LICENSE"
keywords = ["simulated annealing", "optimization", "noisy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: CeCILL-B Free Software License Agreement (CECILL-B)",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
attrs = "^23.2.0"
tqdm = "^4.66.2"


[tool.poetry.group.plot.dependencies]
plotly = "^5.20.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-autodoc-typehints = "^2.0.0"
nbsphinx = "^0.9.3"
ipython = "^8.22.2"
sphinx-rtd-theme = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"
types-tqdm = "^4.66.0.20240106"

[tool.poetry.urls]
Documentation = "https://josiann.readthedocs.io/"
Source = "https://github.com/Vidium/josiann"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
paths = ["josiann", "tests", "vulture_whitelist.py"]

[tool.ruff]
line-length = 120
extend-select = ["I"]

[tool.mypy]
strict = true


[[tool.mypy.overrides]]
module = ['plotly', 'plotly.*']
ignore_missing_imports = true
