[tool.poetry]
name = "josiann"
version = "1.1.8"
description = "Simulated Annealing for noisy cost function"
authors = ["Matteo Bouvier <m.bouvier@vidium-solutions.com>"]
readme = "README.md"
license = "LICENSE"
keywords = ["simulated annealing", "optimization", "noisy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: CeCILL-B Free Software License Agreement (CECILL-B)",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
attrs = "^23.2.0"
tqdm = "^4.66.2"
plotly = { version = "^5.20.0", optional = true }
sphinx = { version = "^7.2.6", optional = true }
sphinx-autodoc-typehints = { version = "^2.0.0", optional = true }
nbsphinx = { version = "^0.9.3", optional = true }
ipython = { version = "^8.22.2", optional = true }
sphinx-rtd-theme = { version = "^2.0.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"
types-tqdm = "^4.66.0.20240106"

[tool.poetry.extras]
plot = ["plotly"]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "nbsphinx",
    "ipython",
    "sphinx-rtd-theme",
]

[tool.poetry.urls]
Documentation = "https://josiann.readthedocs.io/"
Source = "https://github.com/Vidium/josiann"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
paths = ["josiann", "tests", "vulture_whitelist.py"]

[tool.ruff]
line-length = 120
extend-select = ["I"]

[tool.mypy]
strict = true


[[tool.mypy.overrides]]
module = ['plotly', 'plotly.*']
ignore_missing_imports = true
